--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     </header>
 
     <nav>
-        <a href="https://kazuki2984.github.io/slotpage.github.io/">スロット</a>
-        <a href="https://kazuki2984.github.io/info.github.io/">機種情報</a>
-        <a href="https://kazuki2984.github.io/data-.github.io/">当店データ</a>
-        <a href="https://kazuki2984.github.io/contact.github.io/">お問い合わせ</a>
+        <a href="https://kazuki2984.github.io/pslo.github.io/">スロット</a>
+        <a href="https://kazuki2984.github.io/modelinfo.github.io/">機種情報</a>
+        <a href="https://kazuki2984.github.io/pdata.github-io/">当店データ</a>
+        <a href="https://kazuki2984.github.io/pcontact.github.io/">お問い合わせ</a>
     </nav>
 
     <section id="game">
